# url-shortener

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  entries.json
mock/: entries.json  entries_read.json  entries_save_entry.json  entries_save_entry_new.json  entries_serialized.json
src/: config.rs  db.rs  logging.rs  main.rs  ping.rs  routes.rs
src/api/: endpoints.rs  entry.rs  message.rs  mod.rs
src/entries/: json.rs  message.rs  mod.rs
