[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["tracing"] }
axum-test = "18.2.1"
env_logger = "0.11.8"
log = "0.4.28"
mysql = "25.0.1"
r2d2 = "0.8.10"
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp", "tokio-native-tls-comp"] }
reqwest = "0.12.24"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-test = "0.4.4"
tower-http = { version = "0.6.6", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
